--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "gulp-task-boilerplate",
+  "name": "gulp-task-sass",
   "version": "0.0.1",
-  "description": "A gulp task boilerplate to pack several tasks into one node module.",
+  "description": "A gulp task to compile sass files.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wunderkraut/gulp-task-boilerplate"
+    "url": "https://github.com/wunderkraut/gulp-task-sass"
   },
   "bugs": {
-    "url": "https://github.com/wunderkraut/gulp-task-boilerplate/issues"
+    "url": "https://github.com/wunderkraut/gulp-task-sass/issues"
   },
   "dependencies": {
     "gulp": "^3.9.0",
