sass, autoprefixer and sourcemap processing

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-sass": "^2.0.4",
     "lodash.defaultsdeep": "^3.10.0",
+    "node-notifier": "^4.3.1",
     "path": "^0.12.7"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {}
 }
