--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
+    "gulp-filter": "^3.0.1",
     "gulp-sass": "^2.0.4",
     "lodash.defaultsdeep": "^3.10.0",
     "node-notifier": "^4.3.1",
