--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-batch": "^1.0.5",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
+    "gulp-if": "^2.0.0",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
